# core

./: README.md  pyproject.toml
djazz-core/: __init__.py
