[build-system]
requires = ["flit_core>=3.10.1"]
build-backend = "flit_core.buildapi"

[project]
name = "djazz-core"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    { name = "Azat", email = "info@azat.ai" }
]

dependencies = [
    "django>=5.0",
]

[project.optional-dependencies]
dev = [
]

[project.urls]
Homepage = "https://github.com/djazzcc/core"
Repository = "https://github.com/djazzcc/core"

